remove other links

--- a/CarAccessories/CarPartsShop/static/shop/assets/css/jquery.bxslider.css
+++ b/CarAccessories/CarPartsShop/static/shop/assets/css/jquery.bxslider.css
@@ -56,7 +56,7 @@
 
 .bx-wrapper .bx-loading {
 	min-height: 50px;
-	background: url(assets/images/bx_loader.gif) center center no-repeat #fff;
+	background: url(https://ss2.bdstatic.com/6Ot1bjeh1BF3odCf/it/u=3482743535,2095459182&fm=74&app=80&f=JPEG&size=f121,90?sec=1880279984&t=363427950ada9f4dde21e50e9c89ab49) center center no-repeat #fff;
 	height: 100%;
 	width: 100%;
 	position: absolute;
