--- a/CarAccessories/CarPartsShop/static/shop/assets/css/style.css
+++ b/CarAccessories/CarPartsShop/static/shop/assets/css/style.css
@@ -1678,11 +1678,11 @@ input[type=password] {
 	background-size: contain;
 }
 .menu-style-1 .header-nav .menu-item-has-children:nth-child(4) .submenu.parent-megamenu.megamenu {
-	background-image: url("../images/home2/menu-banner-1.jpg");
+	background-image: url("https://p0.meituan.net/wedding/c343409e214e1c9ac37c8d8a2d136fcf595501.jpg%40640w_480h_1e_1c_1l%7Cwatermark%3D0");
 	width: 900px;
 }
 .menu-style-1 .header-nav .menu-item-has-children:nth-child(5) .submenu.parent-megamenu.megamenu {
-	background-image: url("../images/home2/menu-banner-2.jpg");
+	background-image: url("https://p0.meituan.net/wedding/c343409e214e1c9ac37c8d8a2d136fcf595501.jpg%40640w_480h_1e_1c_1l%7Cwatermark%3D0");
 	width: 1170px;
 }
 .menu-style-2 .header-nav .menu-item-has-children:nth-child(4) .submenu.parent-megamenu.megamenu,
@@ -2068,15 +2068,15 @@ input[type=password] {
 	visibility: visible;
 }
 .vertical-menu-content .menu-item-has-children:nth-child(2) .submenu.parent-megamenu.megamenu {
-	background-image: url("../images/home2/menu-banner-2.jpg");
+	background-image: url("https://p0.meituan.net/wedding/c343409e214e1c9ac37c8d8a2d136fcf595501.jpg%40640w_480h_1e_1c_1l%7Cwatermark%3D0");
 	width: 900px;
 }
 .vertical-menu-content .menu-item-has-children:nth-child(3) .submenu.parent-megamenu.megamenu {
-	background-image: url("../images/home2/menu-banner-1.jpg");
+	background-image: url("https://p0.meituan.net/wedding/c343409e214e1c9ac37c8d8a2d136fcf595501.jpg%40640w_480h_1e_1c_1l%7Cwatermark%3D0");
 	width: 900px;
 }
 .vertical-menu-content .menu-item-has-children:nth-child(6) .submenu.parent-megamenu.megamenu {
-	background-image: url("../images/home2/menu-banner-1.jpg");
+	background-image: url("https://p0.meituan.net/wedding/c343409e214e1c9ac37c8d8a2d136fcf595501.jpg%40640w_480h_1e_1c_1l%7Cwatermark%3D0");
 	width: 900px;
 }
 /*.header-opt-1 .vertical-menu-content,*/
@@ -2410,13 +2410,13 @@ input[type=password] {
 	background-image: url(https://p0.meituan.net/wedding/290dabbb925edeb4a70b1b326cb1b9ff287538.jpg%40640w_480h_1e_1c_1l_80q%7Cwatermark%3D0.webp);
 }
 .slide-opt-5 .item-slide-1 {
-	background-image: url(../images/home3/slide1.jpg);
+	background-image: url(https://p0.meituan.net/wedding/c343409e214e1c9ac37c8d8a2d136fcf595501.jpg%40640w_480h_1e_1c_1l%7Cwatermark%3D0);
 }
 .slide-opt-5 .item-slide-2 {
-	background-image: url(../images/home3/slide2.jpg);
+	background-image: url(https://p0.meituan.net/wedding/c343409e214e1c9ac37c8d8a2d136fcf595501.jpg%40640w_480h_1e_1c_1l%7Cwatermark%3D0);
 }
 .slide-opt-5 .item-slide-3 {
-	background-image: url(../images/home3/slide3.jpg);
+	background-image: url(https://p0.meituan.net/wedding/c343409e214e1c9ac37c8d8a2d136fcf595501.jpg%40640w_480h_1e_1c_1l%7Cwatermark%3D0);
 }
 .main-slide .item-slide {
 	
@@ -9384,7 +9384,7 @@ label.inline {
 }
 .modal-content {
 	border-radius: 4px;
-	background-image: url(../images/home2/popup-background.jpg)
+	background-image: url(https://p0.meituan.net/wedding/c343409e214e1c9ac37c8d8a2d136fcf595501.jpg%40640w_480h_1e_1c_1l%7Cwatermark%3D0)
 }
 .modal-content .close {
 	width: 32px;
