--- a/CarAccessories/CarPartsShop/templates/shop/shop_base.html
+++ b/CarAccessories/CarPartsShop/templates/shop/shop_base.html
@@ -129,7 +129,7 @@
                                                 <li class="product-inner">
                                                     <div class="product-thumb style1">
                                                         <div class="thumb-inner">
-                                                            <a href="#"><img src="/static/shop/assets/images/home1/c1.jpg"
+                                                            <a href="#"><img src=""
                                                                              alt="c1"></a>
                                                         </div>
                                                     </div>
@@ -148,7 +148,7 @@
                                                 <li class="product-inner">
                                                     <div class="product-thumb style1">
                                                         <div class="thumb-inner">
-                                                            <a href="#"><img src="/static/shop/assets/images/home1/c2.jpg"
+                                                            <a href="#"><img src=""
                                                                              alt="c2"></a>
                                                         </div>
                                                     </div>
