--- a/CarAccessories/CarPartsShop/templates/shop/shop_index.html
+++ b/CarAccessories/CarPartsShop/templates/shop/shop_index.html
@@ -129,7 +129,7 @@
                                             <div class="product-inner equal-elem">
                                                 <div class="product-thumb">
                                                     <div class="thumb-inner">
-                                                        <a href="#"><img src="/static/assets/images/home1/f1.jpg" alt="f1"></a>
+                                                        <a href="#"><img src="" alt="f1"></a>
                                                     </div>
                                                     <a href="#" class="quick-view">Quick View</a>
                                                 </div>
@@ -172,7 +172,7 @@
                                             <div class="product-inner equal-elem">
                                                 <div class="product-thumb">
                                                     <div class="thumb-inner">
-                                                        <a href="#"><img src="/static/assets/images/home1/f6.jpg" alt="f6"></a>
+                                                        <a href="#"><img src="" alt="f6"></a>
                                                     </div>
                                                     <span class="onnew style2">New</span>
                                                     <a href="#" class="quick-view">Quick View</a>
@@ -218,7 +218,7 @@
                                             <div class="product-inner equal-elem">
                                                 <div class="product-thumb">
                                                     <div class="thumb-inner">
-                                                        <a href="#"><img src="/static/assets/images/home1/f2.jpg" alt="f2"></a>
+                                                        <a href="#"><img src="" alt="f2"></a>
                                                     </div>
                                                     <span class="onnew">New</span>
                                                     <a href="#" class="quick-view">Quick View</a>
@@ -262,7 +262,7 @@
                                             <div class="product-inner equal-elem">
                                                 <div class="product-thumb">
                                                     <div class="thumb-inner">
-                                                        <a href="#"><img src="/static/assets/images/home1/f7.jpg" alt="f7"></a>
+                                                        <a href="#"><img src="" alt="f7"></a>
                                                     </div>
                                                     <span class="onsale style2">-50%</span>
                                                     <a href="#" class="quick-view">Quick View</a>
@@ -310,7 +310,7 @@
                                             <div class="product-inner equal-elem">
                                                 <div class="product-thumb">
                                                     <div class="thumb-inner">
-                                                        <a href="#"><img src="/static/assets/images/home1/f3.jpg" alt="f3"></a>
+                                                        <a href="#"><img src="" alt="f3"></a>
                                                     </div>
                                                     <span class="onsale">-50%</span>
                                                     <a href="#" class="quick-view">Quick View</a>
@@ -356,7 +356,7 @@
                                             <div class="product-inner equal-elem">
                                                 <div class="product-thumb">
                                                     <div class="thumb-inner">
-                                                        <a href="#"><img src="/static/assets/images/home1/f8.jpg" alt="f8"></a>
+                                                        <a href="#"><img src="" alt="f8"></a>
                                                     </div>
                                                     <a href="#" class="quick-view">Quick View</a>
                                                 </div>
@@ -401,7 +401,7 @@
                                             <div class="product-inner equal-elem">
                                                 <div class="product-thumb">
                                                     <div class="thumb-inner">
-                                                        <a href="#"><img src="/static/assets/images/home1/f4.jpg" alt="f4"></a>
+                                                        <a href="#"><img src="" alt="f4"></a>
                                                     </div>
                                                     <a href="#" class="quick-view">Quick View</a>
                                                 </div>
@@ -444,7 +444,7 @@
                                             <div class="product-inner equal-elem">
                                                 <div class="product-thumb">
                                                     <div class="thumb-inner">
-                                                        <a href="#"><img src="/static/assets/images/home1/f9.jpg" alt="f9"></a>
+                                                        <a href="#"><img src="" alt="f9"></a>
                                                     </div>
                                                     <span class="onsale style2">-50%</span>
                                                     <a href="#" class="quick-view">Quick View</a>
@@ -492,7 +492,7 @@
                                             <div class="product-inner equal-elem">
                                                 <div class="product-thumb">
                                                     <div class="thumb-inner">
-                                                        <a href="#"><img src="/static/assets/images/home1/f5.jpg" alt="f5"></a>
+                                                        <a href="#"><img src="" alt="f5"></a>
                                                     </div>
                                                     <span class="onsale">-50%</span>
                                                     <a href="#" class="quick-view">Quick View</a>
@@ -538,7 +538,7 @@
                                             <div class="product-inner equal-elem">
                                                 <div class="product-thumb">
                                                     <div class="thumb-inner">
-                                                        <a href="#"><img src="/static/assets/images/home1/f10.jpg"
+                                                        <a href="#"><img src=""
                                                                          alt="f10"></a>
                                                     </div>
                                                     <a href="#" class="quick-view">Quick View</a>
@@ -599,7 +599,7 @@
                         <div class="product-inner equal-elem">
                             <div class="product-thumb">
                                 <div class="thumb-inner">
-                                    <a href="#"><img src="/static/assets/images/home1/r1.jpg" alt="r1"></a>
+                                    <a href="#"><img src="" alt="r1"></a>
                                 </div>
                                 <span class="onsale">-50%</span>
                                 <a href="#" class="quick-view">Quick View</a>
@@ -642,7 +642,7 @@
                         <div class="product-inner equal-elem">
                             <div class="product-thumb">
                                 <div class="thumb-inner">
-                                    <a href="#"><img src="/static/assets/images/home1/r2.jpg" alt="r2"></a>
+                                    <a href="#"><img src="" alt="r2"></a>
                                 </div>
                                 <span class="onnew">new</span>
                                 <a href="#" class="quick-view">Quick View</a>
@@ -683,7 +683,7 @@
                         <div class="product-inner equal-elem">
                             <div class="product-thumb">
                                 <div class="thumb-inner">
-                                    <a href="#"><img src="/static/assets/images/home1/r3.jpg" alt="r3"></a>
+                                    <a href="#"><img src="" alt="r3"></a>
                                 </div>
                                 <a href="#" class="quick-view">Quick View</a>
                             </div>
@@ -723,7 +723,7 @@
                         <div class="product-inner equal-elem">
                             <div class="product-thumb">
                                 <div class="thumb-inner">
-                                    <a href="#"><img src="/static/assets/images/home1/r4.jpg" alt="r4"></a>
+                                    <a href="#"><img src="" alt="r4"></a>
                                 </div>
                                 <a href="#" class="quick-view">Quick View</a>
                             </div>
@@ -762,7 +762,7 @@
                         <div class="product-inner equal-elem">
                             <div class="product-thumb">
                                 <div class="thumb-inner">
-                                    <a href="#"><img src="/static/assets/images/home1/r5.jpg" alt="r5"></a>
+                                    <a href="#"><img src="" alt="r5"></a>
                                 </div>
                                 <span class="onsale">-50%</span>
                                 <a href="#" class="quick-view">Quick View</a>
@@ -805,7 +805,7 @@
                         <div class="product-inner equal-elem">
                             <div class="product-thumb">
                                 <div class="thumb-inner">
-                                    <a href="#"><img src="/static/assets/images/home1/r6.jpg" alt="r6"></a>
+                                    <a href="#"><img src="" alt="r6"></a>
                                 </div>
                                 <a href="#" class="quick-view">Quick View</a>
                             </div>
