--- a/CarAccessories/CarPartsShop/templates/shop/shop_base.html
+++ b/CarAccessories/CarPartsShop/templates/shop/shop_base.html
@@ -49,11 +49,9 @@
                     <li class="menu-item-has-children">
                             <img src="/static/shop/assets/images/general/China-Flag.png" alt="flag">中国
                     </li>
-<<<<<<< HEAD
+
                     <li><a href="/shop/shop_login"><i class="fa fa-user" aria-hidden="true"></i>注册 / 登录</a></li>
-=======
-                    <li><a href="/shop/shop_login/"><i class="fa fa-user" aria-hidden="true"></i>注册 / 登录</a></li>
->>>>>>> 02ffd3a128fff234024d36d28f35225353aa5042
+
                 </ul><!-- heder links -->
             </div>
         </div> <!-- header-top -->
@@ -289,17 +287,13 @@
 
                                 </li>
                                 <li class=" arrow">
-                                    <a href="/shop/shop_list/" >商品列表</a>
+                                    <a href="/shop/shop_list/p/1/" >商品列表</a>
                                     <span class="toggle-submenu hidden-md"></span>
 
                                 </li>
                                 <li class="arrow">
-<<<<<<< HEAD
-=======
                                     <a href="/news/news_list/" class="dropdown-toggle">新闻</a>
->>>>>>> 02ffd3a128fff234024d36d28f35225353aa5042
                                     <span class="toggle-submenu hidden-md"></span>
-
                                 </li>
 {#                                <li class="menu-item-has-children arrow">#}
 {#                                    <a href="#" class="dropdown-toggle">Sub Menu</a>#}
