--- a/CarAccessories/CarPartsShop/templates/shop/shop_index.html
+++ b/CarAccessories/CarPartsShop/templates/shop/shop_index.html
@@ -57,7 +57,7 @@
                 <div class="title-of-section"><span>特色产品</span></div>
                 <div class="tab-product tab-product-fade-effect">
                     <ul class="box-tabs nav-tab">
-                        <li class="active"><a  href="/shop/shop_list/">所有产品</a></li>
+                        <li class="active"><a  href="/shop/shop_list/p/1/">所有产品</a></li>
 {#                        <li><a data-toggle="tab" href="#tab-2">Audio</a></li>#}
 {#                        <li><a data-toggle="tab" href="#tab-2">Amplifiers</a></li>#}
 {#                        <li><a data-toggle="tab" href="#tab-1">Electronics</a></li>#}
