--- a/CarAccessories/CarPartsShop/templates/shop/shop_list.html
+++ b/CarAccessories/CarPartsShop/templates/shop/shop_list.html
@@ -34,7 +34,7 @@
                             </div>
                         </div>
                         <div class="products products-list products-grid equal-container auto-clear">
-                            {% for shop in shops_list %}
+                            {% for shop in query_set %}
                             <div class="product-item style1 width-33 col-md-4 col-sm-6 col-xs-6 equal-elem">
                                 <div class="product-inner">
                                     <div class="product-thumb">
@@ -81,10 +81,18 @@
                         </div>
                         <div class="pagination">
                             <ul class="nav-links">
-                                <li class="active"><a href="#">1</a></li>
-                                <li><a href="#">2</a></li>
-                                <li><a href="#">3</a></li>
-                                <li class="back-next"><a href="#">Next</a></li>
+                               <li class="active"><a href="#">当前 第 {{ page }} 页</a></li>
+                               <li ><a href="/shop/shop_list/p/1/">首页</a></li>
+
+                                {% if page_obj.has_previous %}
+                                <li class="back-next"><a href="/shop/shop_list/p/{{ page_obj.previous_page_number }}/">上一页</a></li>
+                                {% endif %}
+                                {% for p in page_list %}
+                                <li><a href="/shop/shop_list/p/{{ p }}/">{{ p }}</a></li>
+                                {% endfor %}
+                                {% if page_obj.has_next %}
+                                <li class="back-next"><a href="/shop/shop_list/p/{{ page_obj.next_page_number }}/">下一页</a></li>
+                                {% endif %}
                             </ul>
 
                         </div>
